# ruspie

./: .gitignore  Cargo.toml  README.md  dev.env  docker-compose-test.yml  docker-compose.yml  index.html  makefile
.github/workflows/: robinpie.yaml  ruspie.yaml
columnq/: Cargo.toml
columnq/src/: columnq.rs
columnq/src/query/: graphql.rs  rest.rs  sql.rs
columnq/src/table/: csv.rs  mod.rs  parquet.rs
companion/: .env.example
docker/: docker-compose-studio.yml
docker-compose-files/: docker-compose-studio-kavach.yml  docker-compose-studio.yml  docker-compose.yml
docs/: book.toml
docs/book/: 404.html  authorization.html  configuration.html  configurations.html  endpoints.html  graphQl.html  index.html  intro.html  kavach_and_studio.html  print.html  quering.html  quick_start.html  rest.html  ruspie_and_studio.html  ruspie_barebones.html  searchindex.js  searchindex.json  sql.html  studio.html  text-to-sql.html
docs/src/: SUMMARY.md  authorization.md  configuration.md  configurations.md  endpoints.md  graphQl.md  intro.md  kavach_and_studio.md  quering.md  quick_start.md  rest.md  ruspie_and_studio.md  ruspie_barebones.md  sql.md  studio.md  text-to-sql.md
keto/: keto.yml
kratos/config/: identity.schema.json  kratos.yml  oidc.github.jsonnet  oidc.google.jsonnett
mongo-data/: WiredTiger.turtle
mongo-data/diagnostic.data/: metrics.interim
oathkeeper/: .oathkeeper.yml
oathkeeper/access-rules/: kavach-server.json  kavach-web.json  kratos.json  ruspie-server.json  ruspie-web.json
roapi/: config.yml
roapi/src/: context.rs
robinpie/: Cargo.toml  Dockerfile  schema.json  schemas.json
robinpie/src/: context.rs  main.rs  startup.rs
robinpie/src/context/: mod.rs
robinpie/src/writer/: fetcher.rs  mod.rs  mongo.rs  s3.rs
ruspie/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  config.yml  schemas.json.example
ruspie/auth/: data.mdb  lock.mdb
ruspie/auth/auth/: data.mdb  lock.mdb
ruspie/data/: dummy.csv
ruspie/src/: context.rs  main.rs  server.rs  startup.rs
ruspie/src/api/: graph.rs  mod.rs  rest.rs  routes.rs  schema.rs  sql.rs
ruspie/src/api/auth/: error.rs  handlers.rs  middleware.rs  mod.rs
ruspie/src/api/kavach/: middleware.rs  mod.rs
ruspie/src/api/openai/: mod.rs  text_to_sql.rs
ruspie/src/auth/: controller.rs  error.rs  keys.rs  mod.rs  store.rs
ruspie/src/context/: api_context.rs  mod.rs
ruspie/src/context/auth/: context.rs  error.rs  keys.rs  mod.rs  store.rs
ruspie/src/context/loaders/: mod.rs  schema.rs  table.rs
ruspie/src/context/loaders/fetcher/: mod.rs  mongo.rs  s3.rs
ruspie/src/context/openai/: context.rs  mod.rs  models.rs
ruspie/src/server/: logger.rs  mod.rs
server/: Dockerfile.dev  Dockerfile.migrate  Dockerfile.serve  config.env.example  go.mod  go.sum  main.go
server/cmd/: migrate.go
server/pkg/helper/: generate_uuid.go  pagination.go
server/pkg/logger/: logger_adapter.go
server/ruspie/: README.md  package-lock.json  package.json
server/ruspie/src/: context.rs  server.rs
studio/server/: Dockerfile.migrate  Dockerfile.serve  go.mod  go.sum
studio/server/app/: app.go
studio/server/cmd/: root.go  serve.go
studio/web/: Dockerfile  package-lock.json  package.json
studio/web/app/: layout.tsx
studio/web/components/: UppyUploader.tsx
studio/web/types/: api_error.ts  file.d.ts  organisation.d.ts
test/: output-latest.csv  output.csv  random.csv
text-to-sql-service/: package-lock.json  wrangler.toml
text-to-sql-service/src/: handler.rs  models.rs
text_to_sql_service/: Cargo.toml  wrangler.toml
text_to_sql_service/src/: context.rs  handler.rs  lib.rs  models.rs  router.rs
web/: .env  Dockerfile  Dockerfile.dev  config.env  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/app/: layout.tsx
web/app/home/: layout.tsx  page.tsx
web/app/organisation/: page.tsx
web/components/: Providers.tsx  UppyUploader.js  UppyUploader.tsx
web/components/dataEntry/: input.tsx
web/components/icons/: arrowLeft2.tsx  arrowRight.tsx  arrowRight2.tsx  chevronDown.tsx  chevronRight.tsx  closeIcon.tsx  defaultOrganisation.tsx  edit.tsx  index.tsx  search.tsx  uploadCloud.tsx
web/components/ui/: Avatar.tsx  Button.tsx  DatasetTable.tsx  DeleteButttonWithConfimModal.tsx  Logo.tsx  Navbar.tsx  Organisation.tsx  Projects.tsx  dialog.tsx  searchBar.tsx  select.tsx  switch.tsx
web/lib/: data.js
web/lib/constants/: apiEndpoints.ts
web/public/: index.html
web/src/: App.css  App.js
web/types/: feature.d.ts  file.d.ts  organisation.d.ts
(+207 files in other folders)
