[package]
name = "robinpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0.87"
anyhow = "1.0.51"
object_store = { version = "0.5", features = ["aws"] }
tokio = { version = "1.14.0", features = ["full"] }
url = "2.2.2"
futures = "0.3.28"
reqwest = { version = "0.11.6", features = ["json"] }
