[package]
name = "ruspie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roapi = {git = "https://github.com/elliot14A/roapi", rev="68b9df61e0f30a583fde91c6aab978192058b582"}
columnq = {git = "https://github.com/elliot14A/roapi", rev="68b9df61e0f30a583fde91c6aab978192058b582"}
anyhow = "1.0.64"
tokio = { version = "1", features = ["rt-multi-thread"] }
axum = { version = "0.5", features = ["default", "http2"] }
serde_json = "1.0.87"
tower-http="0"
dotenvy="0"
config="0"
serde="1.0.147"
thiserror="1"
serde_derive="1"
enum-iterator = "1.1.3"
hmac = "0.12.1"
rand = "0.8.5"
roaring = { version = "0.10.0", features = ["serde"] }
sha2 = "0.10.6"
time = { version = "0.3.15", features = ["serde-well-known", "formatting", "parsing", "macros"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
heed = "0.11.0"
graphql-parser = "0.4.0"
jsonwebtoken = "8.2.0"
regex="1.7"