[package]
name = "ruspie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roapi = { git = "https://github.com/roapi/roapi", rev = "4cd9360fb4220a2e1741b24752fb0c3f432d26e0" }
columnq = { git = "https://github.com/roapi/roapi", rev = "4cd9360fb4220a2e1741b24752fb0c3f432d26e0"}
axum = { version = "0.5", features = ["default", "http2"] }
tokio = {version = "1",  features=["full"]}
anyhow="1"
serde_json = "1.0.87"
tower-http = {version="0.4", features=["full"]} 
dotenvy = "0"
config = "0"
serde = "1.0.147"
thiserror = "1"
serde_derive = "1"
enum-iterator = "1.1.3"
hmac = "0.12.1"
rand = "0.8.5"
roaring = { version = "0.10.0", features = ["serde"] }
sha2 = "0.10.6"
time = { version = "0.3.15", features = [
    "serde-well-known",
    "formatting",
    "parsing",
    "macros",
] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
heed = "0.11.0"
graphql-parser = "0.4.0"
jsonwebtoken = "8.2.0"
regex = "1.7"
hyper = { version = "0", features = ["http1", "server", "stream", "runtime"] }
tower-layer = "0"
pin-project-lite = "0"
log = "0"
env_logger = "0"
sqlparser = "0.8.0"
arrow = "6.5.0"
async-trait = "0.1.53"
mongodb = "2.5.0"
futures = "0.3.28"
object_store = { version = "0.5", features = ["aws"] }
url = "2.2.2"
reqwest = { version = "0.11.6", features = ["json"] }
